fix(110342): corrige overflow nos collapses

--- a/src/components/Shareable/Collapse/styles.scss
+++ b/src/components/Shareable/Collapse/styles.scss
@@ -46,6 +46,6 @@
   }
 
   .card {
-    overflow: visible;
+    overflow: visible !important;
   }
 }
